[APP-2943] - Fix mcg and expandcollapse animations (#438)
* [APP-2943] - Fix mcg and expandcollapse animations

* [APP-2943] - Update unit tests

--- a/components/atoms/ExpandCollapse/ExpandCollapse.scss
+++ b/components/atoms/ExpandCollapse/ExpandCollapse.scss
@@ -88,7 +88,7 @@ $transition-time: 0.5s;
     }
 
     .uic--ec-content-inner {
-      height: 0;
+      height: auto;
       overflow: hidden;
       transition: height $transition-time;
     }
